--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,10 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
+//	compile ('org.springframework.boot: spring-boot-starter-webflux')
+	compile('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
+	compile group: 'cz.jirutka.spring', name: 'embedmongo-spring', version: '1.3.1'
+	compile('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
 	runtime('org.springframework.boot:spring-boot-devtools')
 	compile 'org.webjars:bootstrap:3.3.7-1'
 	compileOnly('org.projectlombok:lombok')
